<resources>
    <string name="app_name">Music Library</string>
    <string name="app_in_name">Music Library</string>
    <string name="app_after">Authentication and Register</string>
    <string name="text_bottom">Войдите в свою учетную запись</string>
    <string name="btnSignIn">Войти</string>
    <string name="btnRegister">Зарегистрироваться</string>
    <string name="input_email">Введите Email</string>
    <string name="input_pass">Введите пароль</string>
    <string name="input_name">Введите имя</string>
    <string name="input_phone">Введите номер телефона</string>
    <string name="search">Поиск</string>
    <string name="search_art">Поиск исполнителя</string>
    <string name="search_tr">Поиск трека</string>
    <string name="search_alb">Поиск альбома</string>
    <string name="top">Топ исполнителей</string>
    <string name="top_country">Топ исполнителей в России</string>
    <string name="artist_name">Имя исполнителя</string>
    <string name="album_name">Название альбома</string>
    <string name="songs">Песни</string>
    <string name="song_name">Название песни</string>
</resources>