<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MusicActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleSearchTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/searchArtistEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Search..."
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:hint="@string/search_art"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleSearchTextView"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/primaryDarkColor"
            app:met_singleLineEllipsis="true"/>

        <Button
            android:id="@+id/artistSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:background="@drawable/btnripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchArtistEditText" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/searchAlbumEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Search..."
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:hint="@string/search_alb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/artistSearchButton"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/primaryDarkColor"
            app:met_singleLineEllipsis="true"/>

        <Button
            android:id="@+id/albumSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:background="@drawable/btnripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchAlbumEditText" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/searchTrackEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="Search..."
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:hint="@string/search_tr"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/albumSearchButton"
            app:met_floatingLabel="highlight"
            app:met_baseColor="@color/black"
            app:met_primaryColor="@color/primaryDarkColor"
            app:met_singleLineEllipsis="true"/>

        <Button
            android:id="@+id/trackSearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/search"
            android:background="@drawable/btnripple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchTrackEditText" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/trackSearchButton" />
        <TextView
            android:id="@+id/titleTopArtistsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/top"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/topArtistsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTopArtistsTextView" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/materialDivider2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:dividerInsetEnd="16dp"
            app:dividerInsetStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/topArtistsRecycleView" />

        <TextView
            android:id="@+id/titleGeoTopArtistsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/top_country"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialDivider2" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/geoTopArtistsRecycleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="6dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleGeoTopArtistsTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>